src/app/components/Header/index.scss
@import '../../../constants';

$header-content-peek: 5.5rem;

.Header {
  overflow: hidden;
  position: relative;
  line-height: 1.5;
  background-color: $color-grey-50;

  @media #{$mq-not-sm} {
    font-size: 1.25rem;
  }

  &.is-dark {
    background-color: $color-black;
  }

  .is-dark-mode &:not(.is-dark) {
    background-color: $color-grey-50;
  }

  &.is-layered {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    min-height: calc(100vh - #{$abc-nav-height});

    @media #{$mq-pl-sm} {
      min-height: calc(100vh - #{$abc-nav-height--mq-pl-sm});
    }
  }

  &.is-floating {
    z-index: 2;
    margin-bottom: calc(-100vh + #{$abc-nav-height}) !important;
    background-color: transparent;

    @media #{$mq-pl-sm} {
      margin-bottom: calc(-100vh + #{$abc-nav-height--mq-pl-sm}) !important;
    }
  }
}

.Header-media {
  overflow: hidden;
  position: relative;
  background-color: $color-black;

  .is-pale > & {
    background-color: $color-white;
  }

  :not(.is-layered) > & {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-height: calc(100vh - #{$abc-nav-height + $header-content-peek});

    @media #{$mq-pl-sm} {
      max-height: calc(100vh - #{$abc-nav-height--mq-pl-sm + $header-content-peek});
    }
  }

  .is-layered > & {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    > * {
      height: 100%;
    }
  }

  .is-floating > & {
    display: none;
  }

  .Header-interactive > div > div {
    height: calc(100vh - #{$abc-nav-height});

    @media #{$mq-pl-sm} {
      height: calc(100vh - #{$abc-nav-height--mq-pl-sm});
    }
  }

  &::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 6.25rem;
    background-image: $gradient-black-vertical-0-0-100-60;
  }

  .is-pale > &::after {
    background-image: $gradient-white-vertical-0-0-100-60;
  }
}

.Header-content {
  position: relative;
  margin-left: $layout-fluid-padding;
  margin-right: $layout-fluid-padding;
  padding: 1.25rem 0;
  text-align: center;

  @media #{$mq-md} {
    margin-left: calc(#{cells(1)} + #{$layout-fluid-padding});
    margin-right: calc(#{cells(1)} + #{$layout-fluid-padding});
  }

  @media #{$mq-lg} {
    margin-left: auto;
    margin-right: auto;
    width: $layout-fixed - $layout-fixed-gutter;
  }

  .is-layered > & {
    margin-top: auto;
    background-image: $gradient-black-vertical-0-45-100-75;
  }

  .is-floating > & {
    z-index: 1;
  }
}

.Header-content > * {
  padding-left: cells(1);
  padding-right: cells(1);

  @media #{$mq-md} {
    padding-left: cells(1, 10);
    padding-right: cells(1, 10);
  }

  @media #{$mq-lg} {
    padding-left: calc(#{cells(1)} + #{$layout-fixed-padding});
    padding-right: calc(#{cells(1)} + #{$layout-fixed-padding});
  }
}

.Header-content > h1 {
  @media #{$mq-sm} {
    margin-left: -$layout-fluid-padding;
    margin-right: -$layout-fluid-padding;
  }

  > small {
    display: block;
    color: #80999d;
    font-family: $font-sans;
    font-size: 0.5em;
    text-transform: uppercase;

    .is-dark & {
      color: #8ab3bd;
    }

    .is-layered & {
      color: #e9f4f5;
    }
  }

  &::after {
    content: '';
    transform: translate(0, 100%);
    display: block;
    margin: 1.125rem auto;
    width: 9rem;
    height: 0.125rem;
    background-color: $color-grey-300-transparent-70;

    @media #{$mq-not-sm} {
      width: 18rem;
    }
  }
}

.Header-content > h2 {
  max-width: none;
}

.Header-miscEl,
.Header-byline {
  .Header > .Header-content > & {
    font-size: 1.125rem;

    @media #{$mq-not-sm} {
      font-size: 1.25rem;
    }
  }
}

.Header-byline,
.Header-infoSource,
.Header-updated,
.Header-published {
  font-family: $font-sans;
}

.Header-byline,
.Header-byline + *,
.Header-infoSource,
.Header-infoSource + * {
  margin-top: -0.5rem;
}

.Header .Header-content .Header-byline,
.Header .Header-content .Header-infoSource {
  font-size: 0.9375rem;
}

.Header-byline > em {
  text-transform: lowercase;
}

.Header-byline > em + a {
  margin-left: 0.1em;
}

// .Header-infoSource--<slug>,
.Header-infoSource--730,
.Header-infoSource--australian-story,
.Header-infoSource--foreign-correspondent,
.Header-infoSource--four-corners,
.Header-infoSource--rn {
  overflow: hidden;
  position: relative;
  height: 3.125rem;
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto 100%;
  text-align: left;
  text-indent: -100%;
}

.Header-infoSource--730 {
  background-image: url(./info-sources/730.png);
}

.Header-infoSource--australian-story {
  background-image: url(./info-sources/australian-story.png);
}

.Header-infoSource--foreign-correspondent {
  background-image: url(./info-sources/foreign-correspondent.png);
}

.Header-infoSource--four-corners {
  background-image: url(./info-sources/four-corners.png);
}

.Header-infoSource--rn {
  background-image: url(./info-sources/rn.png);
}

// .Header-infoSource--<slug> a,
.Header-infoSource--730 a,
.Header-infoSource--australian-story a,
.Header-infoSource--foreign-correspondent a,
.Header-infoSource--four-corners a,
.Header-infoSource--rn a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.Header .Header-content .Header-updated,
.Header .Header-content .Header-published {
  margin-bottom: 0;
}

.Header-updated,
.Header-published {
  font-size: 0.75rem;
  color: $color-grey-500;

  .is-dark & {
    color: $color-grey-300;
  }
}

